# verykool

./: .gitignore  Makefile.am  README.txt  build.sh  build_tmp.sh  configure.ac  convert_to_coolest.cpp  cov_kernels.cpp  cov_kernels.hpp  cudalt.py  imagePlane.cpp  imagePlane.hpp  inputOutput.cpp  inputOutput.hpp  makefile  massModels.cpp  massModels.hpp  minimizers.hpp  mn_multinest.cpp  mn_simplex.cpp  nonLinearPars.cpp  nonLinearPars.hpp  sourcePlane.cpp  sourcePlane.hpp  tableAlgebra.cpp  tableAlgebra.hpp  verykool  verykool.cpp
analysis_tools/: analyze_corner.py  analyze_limits.py  analyze_plot_smooth.py  auto.sh  build_coolest.sh  contours.py  convert_to_coolest.cpp  coolest_conversion.cpp  coolest_plotting.py  create_gridded_source.cpp  emcee_to_corner.php  finalize.sh  get_lmodel_step.php  get_par_table.php  latex.php  marginalize_pars.php  movie.php  plot_all.py  plot_all_pert.py  plot_all_smooth.py  plot_converged.py  plot_corner.py  plot_corner2.py  plot_defl.pro  plot_delaunay.py  plot_dpsi_pow_spec.py  plot_fits_diff.py  plot_masked_residuals.py  plot_pow_spec.py  plot_two_point.py  plot_vertex_faces.py  plot_voronoi.py  report.tex  table1.tex  table2.tex  table3.tex  title.tex  voronoi.py
analysis_tools/finalize_scripts/: build.sh  create_gridded_source  create_gridded_source.cpp  finalize.sh  get_lmodel_step.php  latex.php  movie.php  plot_all_pert.py  plot_all_smooth.py  plot_corner.py  plot_dpsi_pow_spec.py  plot_masked_residuals.py  plot_pow_spec.py  plot_source_pow_spec.py  report.aux  report.tex  table1.tex  table2.tex  table3.tex  title.tex
analysis_tools/operator_DsDpsi/: build.sh  create_operator.cpp
analysis_tools/operator_DsDpsi/substruct_images/: vkl_input.json
analysis_tools/reevaluate_intervals/: auto.sh  getdist_intervals.py  swap_cols.py
analysis_tools/two_point_correlation/: build.sh  correlation_function.sh  image_correlation.py  options.json  options.json~  plot_corr.py  reconstruction_matrix_correlation.cpp  theo_matrix_correlation.cpp
analysis_tools/two_point_correlation_dpsi/: build.sh  build.sh~  options_dpsi.json  options_dpsi.json~  theo_matrix_correlation_dpsi.cpp  theo_matrix_correlation_dpsi.cpp~
create_mock_lenses/: generate_mock.php
create_mock_lenses/FProject/: fitsHeader.hpp  fproject.cpp  sourceProfile.cpp  sourceProfile.hpp
create_mock_lenses/FProject/.svn/: wc.db
create_mock_lenses/addMachine/: addmachine  addmachine.cpp
create_mock_lenses/addMachine/.svn/: wc.db
create_mock_lenses/autoMask/: automask  automask.cpp  automask.py
create_mock_lenses/autoMask2/: automask2  automask2.cpp
create_mock_lenses/convertToFits/: convert_to_fits.py
create_mock_lenses/createPerturbations/: generate_grf.py  grf_functions.py  kappa  kappa.cpp
create_mock_lenses/example_mock_creation/: NGC3982.fits  template_analytic.json  template_delaunay.json  template_fromfits.json  template_options.json  vkl_input_perturbed.json
create_mock_lenses/example_mock_creation/recreate_analytic/: addmachine.json  automask.json  fproject.json
create_mock_lenses/example_mock_creation/recreate_image/: addmachine.json  automask.json  fproject.json
create_mock_lenses/example_mock_creation/recreate_test_mock/: addmachine.json  automask.json  fproject.json  perturbations.json
dockerfiles/: Dockerfile
documentation/: index.html  index.php  inputs_class.inc.php
documentation/css/: index.css  index.css~
documentation/form_json/: options_instrumental_system.json  options_lens.json  options_observer.json  options_physical_system.json  options_source.json
documentation/js/: index.js  index.js~
inc/: covKernels.hpp  eigenAlgebra.hpp  imagePlane.hpp  inputOutput.hpp  likelihoodModels.hpp  mainLogLike.hpp  massModels.hpp  minimizers.hpp  nonLinearPars.hpp  parameterModels.hpp  sourcePlane.hpp  tableAlgebra.hpp  tableDefinition.hpp
include/: baseAlgebra.hpp  covKernels.hpp  eigenAlgebra.hpp  inputOutput.hpp  likelihoodModels.hpp  massModels.hpp  minimizers.hpp  sourceProfile.hpp
scripts/: agent.py  auto_runs.sh  common_funcs.py  configure_command_full.txt  create_map.php  execute_runs.sh  modify_in.py  out_to_in.py  setup_map_run.py  vkl_analyzer.in  vkl_cluster_submit.sh  vkl_driver.in
src/common/: covKernels.cpp  cov_kernels.cpp  eigenAlgebra.cpp  imagePlane.cpp  inputOutput.cpp  likelihoodModels.cpp  massModels.cpp  nonLinearPars.cpp  parameterModels.cpp  sourcePlane.cpp  sourceProfile.cpp  tableAlgebra.cpp
src/cosmosis/: min_cosmosis.cpp
src/cpu/: baseAlgebra.cpp
src/gpu/: baseAlgebra.cpp  baseAlgebra.cu  cusparse_cholesky_solver.cu  cusparse_cholesky_solver.h  cusparse_wrapper.cu  cusparse_wrapper.h
src/other/: createCosmosisValuesPriorsIni.cpp  createCosmosisValuesPriorsIni.cpp~  createEmceeStart.cpp
src/verykool/: inputOutput.cpp  min_iterator.cpp  min_minuit.cpp  min_multinest.cpp  min_simplex.cpp  min_test.cpp  minimizers.hpp  minimizers.hpp~  myminuit.hpp  verykool.cpp  verykool_test.cpp
tests/vkl_paper_sec_3.1/create_mock_data/: molet_input.json
tests/vkl_paper_sec_3.1/curv/: vkl_input.json
tests/vkl_paper_sec_3.1/data/: noise_realization.fits
tests/vkl_paper_sec_3.1/gauss/: vkl_input.json
tests/vkl_paper_sec_3.1/identity/: vkl_input.json
tests/vkl_paper_sec_3.3/create_mock_data/: molet_input.json
tests/vkl_paper_sec_3.3/smooth_gauss/: vkl_input.json
tests/vkl_paper_sec_3.3/xff_gauss_curv/: vkl_input.json
tests/vkl_paper_sec_3.3/xff_gauss_gauss/: vkl_input.json
tests/vkl_paper_sec_3.3/xxf_gauss_gauss/: vkl_input.json
tests/vkl_paper_sec_3.4/create_mock_data/: molet_input.json
tests/vkl_paper_sec_3.4/fff_exp_gauss_map_n2/: vkl_input.json
tests/vkl_paper_sec_3.4/fxf_exp_gauss/: vkl_input.json
tests/vkl_paper_sec_3.4/smooth_exp/: vkl_input.json
tests/vkl_paper_sec_3.4/xff_exp_gauss/: vkl_input.json
tests/vkl_paper_sec_3.4/xfx_exp_gauss/: vkl_input.json
tests/vkl_paper_sec_3.4/xxf_exp_curv/: vkl_input.json
tests/vkl_paper_sec_3.4/xxf_exp_gauss/: vkl_input.json
tests/vkl_paper_sec_3.4/xxx_exp_gauss_n2/: vkl_input.json
tests/vkl_paper_sec_3.4/xxx_exp_gauss_n3/: vkl_input.json
(+11 files in other folders)
